--- a/package.json
+++ b/package.json
@@ -27,16 +27,22 @@
     "@ckeditor/ckeditor5-build-classic": "^15.0.0",
     "@ng-select/ng-select": "^3.3.0",
     "@swimlane/ngx-dnd": "^8.1.0",
+    "@types/file-saver": "^2.0.1",
+    "@types/xlsx": "0.0.36",
     "bootstrap": "^4.3.1",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "ng-click-outside": "^5.1.1",
     "ng-pick-datetime": "^7.0.0",
     "ng2-currency-mask": "^5.3.1",
     "ng4-loading-spinner": "^1.2.3",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-filesaver": "^8.1.0",
     "ngx-pipes": "^2.6.0",
     "rxjs": "~6.4.0",
+    "ts-xlsx": "0.0.11",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
