--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "@types/file-saver": "^2.0.1",
     "@types/xlsx": "0.0.36",
     "bootstrap": "^4.3.1",
+    "exceljs": "^3.4.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "igniteui-angular": "^8.2.10",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.2.11",
     "ng-click-outside": "^5.1.1",
     "ng-pick-datetime": "^7.0.0",
     "ng2-currency-mask": "^5.3.1",
